# GeometryTrash

./: CMakeLists.txt  aabb.cpp  aabb.h  audiosystem.cpp  audiosystem.h  camera.cpp  camera.h  colliders.h  collision.cpp  collision.h  collisions.cpp  collisions.h  core.cpp  core.h  gametextures.cpp  gametextures.h  level.cpp  level.h  oobb.cpp  oobb.h  player.cpp  player.h  settings.h  shaderloader.h  song.cpp  song.h  wavetrail.cpp  wavetrail.h  window.cpp  window.h
Shaders/: gerstnerWave.frag  gerstnerWave.vert  level.frag  level.vert  player.frag  player.vert  wave.frag  wave.vert
